View layer renaming crashes #53638

Closed
opened 2017-12-26 20:31:27 +01:00 by Dalai Felinto · 9 comments

Blender Version
Broken: 9515737b55
Worked: 9515737b554^

Short description of error
If you rename a view layer you get a crash.

Exact steps for others to reproduce the error
Open default and rename the view layer, or do:

-b --factory-startup --python-expr "import bpy; bpy.context.view_layer.name='New Name'"

Technical information
If you add:

BLI_assert(scene != NULL);

To either rna_ViewLayer_name_setor rna_Scene_use_view_map_cache_update (if you want to see the same issue but with view_layer.use_view_map_cache()) you can catch the problem right away.

**Blender Version** Broken: 9515737b554 Worked: 9515737b554^ **Short description of error** If you rename a view layer you get a crash. **Exact steps for others to reproduce the error** Open default and rename the view layer, or do: ``` -b --factory-startup --python-expr "import bpy; bpy.context.view_layer.name='New Name'" ``` **Technical information** If you add: ``` BLI_assert(scene != NULL); ``` To either `rna_ViewLayer_name_set`or `rna_Scene_use_view_map_cache_update` (if you want to see the same issue but with view_layer.use_view_map_cache()) you can catch the problem right away.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2017-12-26 20:32:06 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Owner

Maybe @ideasman42 can lend a hand here since this is RNA related?

Maybe @ideasman42 can lend a hand here since this is RNA related?
Campbell Barton was unassigned by Dalai Felinto 2017-12-27 15:48:40 +01:00
Julian Eisel was assigned by Dalai Felinto 2017-12-27 15:48:40 +01:00
Author
Owner

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author
Owner

Actually just bisected and this one comes from @JulianEisel 's 9515737b55.

Actually just bisected and this one comes from @JulianEisel 's 9515737b554.

This issue was referenced by b517dc9b2d

This issue was referenced by b517dc9b2db01ca6e9c7623f8686fd502280343e
Author
Owner

There are actually two issues here.

For renaming via the UI (bug introduced in 9515737b55) we can fix it by: P578 - although renaming it doesn't update drawing for the properties editor, which it should.

For renaming via Python I need a different fix, and it was introduced in: 3a95bdfc65 (my own commit).

There are actually two issues here. For renaming via the UI (bug introduced in 9515737b554) we can fix it by: [P578](https://archive.blender.org/developer/P578.txt) - although renaming it doesn't update drawing for the properties editor, which it should. For renaming via Python I need a different fix, and it was introduced in: 3a95bdfc65d (my own commit).

This issue was referenced by 110373de6a

This issue was referenced by 110373de6a52a20eb759aea9a11e4c45fcdb619b
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53638
No description provided.