Fix T53638: View layer renaming crashes 1/2

This fixes renaming via the interface.

This bug was introduced originally in 9515737b554. We need the id of the RNA
property to be the one that owns the data (view layer).

So it can't be the window's id, but the scene one instead.